[gd_scene load_steps=6 format=2]

[ext_resource path="res://Src/Actionable.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Shelf.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.27293, 1, 1 )

[node name="Shelf" type="Spatial" groups=[
"Shelf",
]]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="Top" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33792, 0 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="Actionable" parent="." instance=ExtResource( 1 )]

[node name="Pickup1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9534, 0, 0 )

[node name="Pickup2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8471, 0, 0 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="action_from_player" from="Actionable" to="." method="_on_Actionable_action_from_player"]
